# MLExperience

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .flake8  Define.py  Dockerfile  Optimize.py  Training.py  main.py  preprocessing.py  pyproject.toml
backend/db/: database.py
backend/db/init/: house.csv  init.sql  lego.csv
backend/models/: requests.py
backend/routes/: api.py
backend/services/: data_service.py  optimize_service.py  training_service.py
frontend/: .dockerignore  .eslintrc.js  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  react-shim.d.ts  style.css  vite-env.d.ts
frontend/src/components/: index.ts
frontend/src/components/Common/: CommonCheckBox.tsx  CommonSInput.tsx  CommonTButton.tsx  FetchButton.tsx  OptimizeDialog.tsx
frontend/src/components/ExecTraining/: ExecTraining.tsx  LostLineChart.tsx
frontend/src/components/SetInputData/: DataTable.tsx  SelectTarget.tsx  SetInputData.tsx
frontend/src/components/SetModel/: SetKnn.tsx  SetModel.tsx  SetNn.tsx  SetRf.tsx  SetSvm.tsx
frontend/src/hooks/: useApi.ts  useFetchHandlers.ts
frontend/src/types/: api.ts  constants.ts  contexts.ts  enums.ts  index.ts  models.ts
